# base_vacancy

./: Readme.md  config.py  main.py  pyproject.toml
src/: classes.py  utils.py
tests_src/: test_classes.py  test_utils.py
