[project]
name = "base-vacancy"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"
types-requests = "^2.32.4.20250809"
types-setuptools = "^80.9.0.20250809"
types-click = "^7.1.8"
types-psycopg2 = "^2.9.21.20250809"

